--- a/pdf_template.html
+++ b/pdf_template.html
@@ -1,108 +1,88 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Report</title>
-  <style>
-    html, body {
-      height: 100%;
-    }
+    <meta charset="UTF-8">
+    <title>report</title>
+    <style>
+        body {
+            font-family: Verdana, sans-serif;
+            text-align: center;
+        }
 
-    html {
-      height: 100%;
-      width: 100%;
-      display: table;
-      margin: auto;
-    }
+        img {
+            -o-object-fit: contain;
+            width: 100%;
+            object-fit: contain;
+        }
 
-    body {
-      display: table-cell;
-      vertical-align: middle;
-      font-family: Verdana, sans-serif;
-      font-weight: 400;
-      margin: auto;
-    }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
 
-    img {
-      display: block;
-      margin: 0 auto;
-      width: 850px;
-    }
+        th {
+           border: 1px solid black;
+           padding: 5px;
+        }
 
-    h1 {
-      text-align: center;
-    }
+        td {
+           border: 1px solid black;
+           padding: 5px;
+        }
 
-    h2, caption {
-      margin-bottom: 20px;
-    }
+        .noBorder{
+            border: none;
+        }
 
-    table {
-      border-collapse: collapse;
-      margin: auto;
-      margin-top: 30px;
-    }
-
-    th, td {
-      border: 1px solid #000;
-      text-align: center;
-      padding: 5px;
-    }
-
-    .space {
-      border-top: #fff;
-      border-bottom: #fff;
-      padding: 10px;
-    }
-
-  </style>
+    </style>
 </head>
 <body>
-    <h1>
-      Аналитика по зарплатам и городам для<br>профессии {{  name  }}
-    </h1>
+<h1 class="header">Аналитика по зарплатам и городам для профессии {{  prof  }}</h1>
 
-    <div class="items"><img src="C:\Users\Home\PycharmProjects\0709firstTask\graph.png" alt="Графики статистики"></div>
+<img src="C:\Users\Home\PycharmProjects\Khudiakova\graph.png">
 
-    <table class="statistics-by-year" border="0" cellspacing="0" cellpadding="0">
-      <caption><h2>Статистика по годам</h2></caption>
-      <tr>
-        <th>{{  names_sheet1[0]  }}</th>
-        <th>{{  names_sheet1[1]  }}</th>
-        <th>{{  names_sheet1[2]  }}</th>
-        <th>{{  names_sheet1[3]  }}</th>
-        <th>{{  names_sheet1[4]  }}</th>
-      </tr>
-      {% for year, value in salary_lvl_by_year.items() %}
-        <tr>
-          <td>{{  year  }}</td>
-          <td>{{  value  }}</td>
-          <td>{{  salary_lvl_by_year_for_prof[year]  }}</td>
-          <td>{{  count_vac_by_year[year]  }}</td>
-          <td>{{  count_vac_by_year_for_prof[year]  }}</td>
-        </tr>
-      {% endfor %}
-    </table>
+{%  macro get_by_area(dicts_by_area)  -%}
+{%  for i in range(dicts_by_area[0] | length)  -%}
+    <tr>
+        <td>{{  keys_0_area[i]  }}</td>
+        <td>{{  values_0_area[i]  }}</td>
+        <td class="noBorder"></td>
+        <td>{{  keys_1_area[i]  }}</td>
+        <td>{{  ((values_1_area[i] * 100)|round(2))|string + "%"  }}</td>
+    </tr>
+{%-  endfor  %}
+{%-  endmacro  %}
 
-    <table class="statistics-by-city">
-      <caption><h2>Статистика по городам</h2></caption>
-      <tr>
-        <th>{{  names_sheet2[0]  }}</th>
-        <th>{{  names_sheet2[1]  }}</th>
-        <th class="space"></th>
-        <th>{{  names_sheet2[2]  }}</th>
-        <th>{{  names_sheet2[3]  }}</th>
-      </tr>
-      {% for city in statistics_by_city_dic %}
-        <tr>
-            <td>{{ city[0] }}</td>
-            <td>{{ salary_lvl_by_city[city[0]] }}</td>
-            <td class="space"></td>
-            <td>{{ city[1] }}</td>
-            <td>{{ vacancy_rate_by_city[city[1]] }}</td>
-        </tr>
-      {% endfor %}
-    </table>
+{%  macro get_by_year(dicts_by_year)  -%}
+{%  for year, value in dicts_by_year[0].items()  -%}
+    <tr>
+        <td>{{  year  }}</td>
+        <td>{{  value  }}</td>
+        <td>{{  dicts_by_year[1][year]  }}</td>
+    </tr>
+{%-  endfor  %}
+{%-  endmacro  %}
+
+<h2>Статистика по годам для выбранной профессии и региона</h2>
+<table>
+    <tr>
+        <th>Год</th>
+        <th>Средняя зарплата - {{  prof  }}, регион - {{  area  }}</th>
+        <th>Количество вакансий - {{  prof  }}, регион - {{  area  }}</th>
+    </tr>
+    {{  get_by_year(by_year)  }}
+</table>
+
+<h2>Статистика по городам</h2>
+<table>
+    <tr>
+        <th>Город</th>
+        <th>Уровень зарплат</th>
+        <th class="noBorder"></th>
+        <th>Город</th>
+        <th>Доля вакансий</th>
+    </tr>
+    {{  get_by_area(by_area)  }}
+</table>
 </body>
 </html>
